Help update Nov 22, change shading factor to loss in PV and PVWatts ui, update metrics significant digits #ui

--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -196,7 +196,7 @@
 </li>
 </ul>
 </li>
-<li class="heading2" id="i6.4" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.4" href="pvwatts.htm" target="hmcontent"><span class="heading2" id="s6.4" ondblclick="return dblclicked(this)">PVWatts Model</span></a>
+<li class="heading2" id="i6.4" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a6.4" href="pvwatts.htm" target="hmcontent"><span class="heading2" id="s6.4" ondblclick="return dblclicked(this)">PVWatts</span></a>
 <ul id="ul6.4" style="list-style-type:none">
 <li class="heading3" id="i6.4.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a6.4.1" href="pvwatts_system_design.htm" target="hmcontent"><span class="heading3" id="s6.4.1">System Design</span></a>
 </li>
@@ -576,63 +576,63 @@
 </li>
 </ul>
 </li>
-<li class="heading1" id="i26" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a26" href="shade_calculator.htm" target="hmcontent"><span class="heading1" id="s26" ondblclick="return dblclicked(this)">3D Shade Calculator</span></a>
+<li class="heading1" id="i26" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a26" href="3d_shade_calculator.htm" target="hmcontent"><span class="heading1" id="s26" ondblclick="return dblclicked(this)">3D Shade Calculator</span></a>
 <ul id="ul26" style="list-style-type:none">
-<li class="heading2" id="i26.1" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a26.1" href="how-to.htm" target="hmcontent"><span class="heading2" id="s26.1" ondblclick="return dblclicked(this)">How-To</span></a>
+<li class="heading2" id="i26.1" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a26.1" href="3dshad-how-to.htm" target="hmcontent"><span class="heading2" id="s26.1" ondblclick="return dblclicked(this)">How-To</span></a>
 <ul id="ul26.1" style="list-style-type:none">
-<li class="heading3" id="i26.1.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.1" href="define-location.htm" target="hmcontent"><span class="heading3" id="s26.1.1">Define the scene location</span></a>
+<li class="heading3" id="i26.1.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.1" href="3dshad-define-location.htm" target="hmcontent"><span class="heading3" id="s26.1.1">Define the scene location</span></a>
 </li>
-<li class="heading3" id="i26.1.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.2" href="underlay.htm" target="hmcontent"><span class="heading3" id="s26.1.2">Use an image underlay</span></a>
+<li class="heading3" id="i26.1.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.2" href="3dshad-underlay.htm" target="hmcontent"><span class="heading3" id="s26.1.2">Use an image underlay</span></a>
 </li>
-<li class="heading3" id="i26.1.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.3" href="shading-objects.htm" target="hmcontent"><span class="heading3" id="s26.1.3">Add shading objects</span></a>
+<li class="heading3" id="i26.1.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.3" href="3dshad-shading-objects.htm" target="hmcontent"><span class="heading3" id="s26.1.3">Add shading objects</span></a>
 </li>
-<li class="heading3" id="i26.1.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.4" href="active-surface.htm" target="hmcontent"><span class="heading3" id="s26.1.4">Add active surface objects</span></a>
+<li class="heading3" id="i26.1.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.4" href="3dshad-active-surface.htm" target="hmcontent"><span class="heading3" id="s26.1.4">Add active surface objects</span></a>
 </li>
-<li class="heading3" id="i26.1.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.5" href="change-view.htm" target="hmcontent"><span class="heading3" id="s26.1.5">Change the view</span></a>
+<li class="heading3" id="i26.1.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.5" href="3dshad-change-view.htm" target="hmcontent"><span class="heading3" id="s26.1.5">Change the view</span></a>
 </li>
-<li class="heading3" id="i26.1.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.6" href="zoom-pan.htm" target="hmcontent"><span class="heading3" id="s26.1.6">Zoom and pan the scene</span></a>
+<li class="heading3" id="i26.1.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.6" href="3dshad-zoom-pan.htm" target="hmcontent"><span class="heading3" id="s26.1.6">Zoom and pan the scene</span></a>
 </li>
-<li class="heading3" id="i26.1.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.7" href="select.htm" target="hmcontent"><span class="heading3" id="s26.1.7">Select an object</span></a>
+<li class="heading3" id="i26.1.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.7" href="3dshad-select.htm" target="hmcontent"><span class="heading3" id="s26.1.7">Select an object</span></a>
 </li>
-<li class="heading3" id="i26.1.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.8" href="move.htm" target="hmcontent"><span class="heading3" id="s26.1.8">Move objects</span></a>
+<li class="heading3" id="i26.1.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.8" href="3dshad-move.htm" target="hmcontent"><span class="heading3" id="s26.1.8">Move objects</span></a>
 </li>
-<li class="heading3" id="i26.1.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.9" href="resize.htm" target="hmcontent"><span class="heading3" id="s26.1.9">Resize objects</span></a>
+<li class="heading3" id="i26.1.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.9" href="3dshad-resize.htm" target="hmcontent"><span class="heading3" id="s26.1.9">Resize objects</span></a>
 </li>
-<li class="heading3" id="i26.1.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.10" href="rotate.htm" target="hmcontent"><span class="heading3" id="s26.1.10">Rotate objects</span></a>
+<li class="heading3" id="i26.1.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.10" href="3dshad-rotate.htm" target="hmcontent"><span class="heading3" id="s26.1.10">Rotate objects</span></a>
 </li>
-<li class="heading3" id="i26.1.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.11" href="delete.htm" target="hmcontent"><span class="heading3" id="s26.1.11">Delete and copy objects</span></a>
+<li class="heading3" id="i26.1.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.11" href="3dshad-delete.htm" target="hmcontent"><span class="heading3" id="s26.1.11">Delete and copy objects</span></a>
 </li>
-<li class="heading3" id="i26.1.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.12" href="colors.htm" target="hmcontent"><span class="heading3" id="s26.1.12">Change object colors</span></a>
+<li class="heading3" id="i26.1.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.12" href="3dshad-colors.htm" target="hmcontent"><span class="heading3" id="s26.1.12">Change object colors</span></a>
 </li>
-<li class="heading3" id="i26.1.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.13" href="generate-data.htm" target="hmcontent"><span class="heading3" id="s26.1.13">Generate shading data</span></a>
+<li class="heading3" id="i26.1.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.13" href="3dshad-generate-data.htm" target="hmcontent"><span class="heading3" id="s26.1.13">Generate shade data</span></a>
 </li>
-<li class="heading3" id="i26.1.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.14" href="export.htm" target="hmcontent"><span class="heading3" id="s26.1.14">Export shade data</span></a>
-</li>
-<li class="heading3" id="i26.1.15" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.15" href="sam.htm" target="hmcontent"><span class="heading3" id="s26.1.15">Use shade data in SAM</span></a>
-</li>
-<li class="heading3" id="i26.1.16" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.16" href="proxy.htm" target="hmcontent"><span class="heading3" id="s26.1.16">Configure proxy server</span></a>
+<li class="heading3" id="i26.1.14" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.1.14" href="3dshad-export.htm" target="hmcontent"><span class="heading3" id="s26.1.14">Export shade data</span></a>
 </li>
 </ul>
 </li>
-<li class="heading2" id="i26.2" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a26.2" href="reference.htm" target="hmcontent"><span class="heading2" id="s26.2" ondblclick="return dblclicked(this)">Reference</span></a>
+<li class="heading2" id="i26.2" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a26.2" href="3dshad-reference.htm" target="hmcontent"><span class="heading2" id="s26.2" ondblclick="return dblclicked(this)">Reference</span></a>
 <ul id="ul26.2" style="list-style-type:none">
-<li class="heading3" id="i26.2.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.1" href="open-save.htm" target="hmcontent"><span class="heading3" id="s26.2.1">Open and Save</span></a>
+<li class="heading3" id="i26.2.1" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.1" href="3dshad-location.htm" target="hmcontent"><span class="heading3" id="s26.2.1">Location</span></a>
 </li>
-<li class="heading3" id="i26.2.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.2" href="location.htm" target="hmcontent"><span class="heading3" id="s26.2.2">Location</span></a>
+<li class="heading3" id="i26.2.2" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.2" href="3dshad-create.htm" target="hmcontent"><span class="heading3" id="s26.2.2">Create Active Surface</span></a>
 </li>
-<li class="heading3" id="i26.2.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.3" href="create.htm" target="hmcontent"><span class="heading3" id="s26.2.3">Create (Shape Reference)</span></a>
+<li class="heading3" id="i26.2.3" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.3" href="shading_objects.htm" target="hmcontent"><span class="heading3" id="s26.2.3">Create Shading Object</span></a>
 </li>
-<li class="heading3" id="i26.2.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.4" href="3d-scene.htm" target="hmcontent"><span class="heading3" id="s26.2.4">3D Scene</span></a>
+<li class="heading3" id="i26.2.4" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.4" href="3dshad-3d-scene.htm" target="hmcontent"><span class="heading3" id="s26.2.4">3D Scene</span></a>
 </li>
-<li class="heading3" id="i26.2.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.5" href="birds-eye.htm" target="hmcontent"><span class="heading3" id="s26.2.5">Bird's Eye</span></a>
+<li class="heading3" id="i26.2.5" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.5" href="3dshad-birds-eye.htm" target="hmcontent"><span class="heading3" id="s26.2.5">Bird's Eye</span></a>
 </li>
-<li class="heading3" id="i26.2.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.6" href="elevations.htm" target="hmcontent"><span class="heading3" id="s26.2.6">Elevations</span></a>
+<li class="heading3" id="i26.2.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.6" href="3dshad-elevations.htm" target="hmcontent"><span class="heading3" id="s26.2.6">Elevations</span></a>
 </li>
-<li class="heading3" id="i26.2.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.7" href="analyze.htm" target="hmcontent"><span class="heading3" id="s26.2.7">Analyze</span></a>
+<li class="heading3" id="i26.2.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.7" href="3dshad-analyze.htm" target="hmcontent"><span class="heading3" id="s26.2.7">Analyze</span></a>
 </li>
-<li class="heading3" id="i26.2.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.8" href="shortcuts.htm" target="hmcontent"><span class="heading3" id="s26.2.8">Shortcuts</span></a>
+<li class="heading3" id="i26.2.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.8" href="3dshad-import_export.htm" target="hmcontent"><span class="heading3" id="s26.2.8">Import and Export</span></a>
 </li>
-<li class="heading3" id="i26.2.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.9" href="file-types.htm" target="hmcontent"><span class="heading3" id="s26.2.9">File Types</span></a>
+<li class="heading3" id="i26.2.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.9" href="3dshad-save-close.htm" target="hmcontent"><span class="heading3" id="s26.2.9">Save and Close</span></a>
+</li>
+<li class="heading3" id="i26.2.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.10" href="3dshad-shortcuts.htm" target="hmcontent"><span class="heading3" id="s26.2.10">Shortcuts</span></a>
+</li>
+<li class="heading3" id="i26.2.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading3" id="a26.2.11" href="3dshad-file-types.htm" target="hmcontent"><span class="heading3" id="s26.2.11">File Types</span></a>
 </li>
 </ul>
 </li>
