SAM help for Nov 24 release

--- a/deploy/runtime/help/html/export_data.htm
+++ b/deploy/runtime/help/html/export_data.htm
@@ -51,7 +51,7 @@
 <p class="p_VariableName"><span class="f_VariableName">Copy as CSV</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Copies the metrics table to your computer's clipboard with columns separated by commas.</span></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Graph Data and Images</span></h3>
-<p class="p_Text"><span class="f_Text">Right-click graphs in SAM to export graph data or an image of the graph. This works for graphs on input pages and on the Results page (<a href="summary.htm" class="topiclink">Summary</a>, <a href="graphs.htm" class="topiclink">Graphs</a>, <a href="dview_timeseries.htm" class="topiclink">Time series</a>, <a href="dview_daily.htm" class="topiclink">Daily</a>, <a href="dview_profiles.htm" class="topiclink">Profiles</a>, <a href="dview_heatmap.htm" class="topiclink">Heat map</a>, <a href="dview_scatter.htm" class="topiclink">Scatter</a>, <a href="financial_metrics.htm" class="topiclink">PDF / CDF</a>, <a href="dview_durationcurve.htm" class="topiclink">Duration curve</a>).</span></p>
+<p class="p_Text"><span class="f_Text">Right-click graphs in SAM to export graph data or an image of the graph. This works for graphs on input pages and on the Results page (<a href="summary.htm" class="topiclink">Summary</a>, <a href="graphs.htm" class="topiclink">Graphs</a>, and <a href="dview_timeseries.htm" class="topiclink">Time series</a> graphs.</span></p>
 <p class="p_TitleProcedure"><span class="f_TitleProcedure">To export data:</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Copy data to clipboard </span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Copies the data visible in the graph to your computer's clipboard. You can then paste the data into another program or document.</span></p>
@@ -69,7 +69,7 @@
 <p class="p_VariableDescription"><span class="f_VariableDescription">Creates a file of the graph image in PDF or SVG format. This option is best for images that you plan to resize later.</span></p>
 <h3 class="p_Heading3_atocs_" style="border-top: none; border-right: none; border-left: none;"><span class="f_Heading3_atocs_">Table Data</span></h3>
 <p class="p_Text"><span class="f_Text">Use the buttons along the top of the Results page to export data from tables. This works for The <a href="cashflow.htm" class="topiclink">Cash Flows</a> table and Tables provide three options for exporting data shown in the tables:</span></p>
-<p class="p_Text"><img src="ss_results-buttonsdatabrowser.gif" width="563" height="141" alt="SS_Results-ButtonsDataBrowser" style="width:563px;height:141px;border:none" /></p>
+<p class="p_Text"><img src="ss_results-buttonsdatabrowser.gif" width="479" height="139" alt="SS_Results-ButtonsDataBrowser" style="width:479px;height:139px;border:none" /></p>
 <p class="p_VariableName"><span class="f_VariableName">Copy to clipboard</span></p>
 <p class="p_VariableDescription"><span class="f_VariableDescription">Copies the table to your clipboard. You can paste the entire table into a word processing document, spreadsheet, presentation or other software.</span></p>
 <p class="p_VariableName"><span class="f_VariableName">Save as CSV</span></p>
