Updated help for release Nov 24, with fixes for results page topics

--- a/deploy/runtime/help/html/samhelp_content.htm
+++ b/deploy/runtime/help/html/samhelp_content.htm
@@ -492,6 +492,20 @@
 </li>
 <li class="heading2" id="i22.6" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a22.6" href="dview_timeseries.htm" target="hmcontent"><span class="heading2" id="s22.6">Time Series</span></a>
 </li>
+<li class="heading2" id="i22.7" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a22.7" href="dview_daily.htm" target="hmcontent"><span class="heading2" id="s22.7">Daily</span></a>
+</li>
+<li class="heading2" id="i22.8" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a22.8" href="dview_profiles.htm" target="hmcontent"><span class="heading2" id="s22.8">Profiles</span></a>
+</li>
+<li class="heading2" id="i22.9" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a22.9" href="dview_statistics.htm" target="hmcontent"><span class="heading2" id="s22.9">Statistics</span></a>
+</li>
+<li class="heading2" id="i22.10" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a22.10" href="dview_heatmap.htm" target="hmcontent"><span class="heading2" id="s22.10">Heat Map</span></a>
+</li>
+<li class="heading2" id="i22.11" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a22.11" href="dview_scatter.htm" target="hmcontent"><span class="heading2" id="s22.11">Scatter</span></a>
+</li>
+<li class="heading2" id="i22.12" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a22.12" href="dview_pdfcdf.htm" target="hmcontent"><span class="heading2" id="s22.12">PDF / CDF</span></a>
+</li>
+<li class="heading2" id="i22.13" style="background:url() no-repeat;padding-left:0px" onclick="return clicked(this,event)"><a class="heading2" id="a22.13" href="dview_durationcurve.htm" target="hmcontent"><span class="heading2" id="s22.13">Duration Curve</span></a>
+</li>
 </ul>
 </li>
 <li class="heading1" id="i23" style="background:url() no-repeat;cursor:pointer;padding-left:0px" onclick="return clicked(this,event)"><a class="heading1" id="a23" href="financial_metrics.htm" target="hmcontent"><span class="heading1" id="s23" ondblclick="return dblclicked(this)">Financial Metrics</span></a>
